Fix the overlap of the background icon over the header text

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -42,20 +42,22 @@
     overflow: hidden;
     position: relative;
     height: 420px;
+    z-index: 2;
   }
 
   .header-background::before {
     content: '';
     position: absolute;
-    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="%23FFFFFF"><rect fill="none" height="24" width="24" y="0"/><path d="M7,20h4c0,1.1-0.9,2-2,2S7,21.1,7,20z M5,19h8v-2H5V19z M16.5,9.5c0,3.82-2.66,5.86-3.77,6.5H5.27 C4.16,15.36,1.5,13.32,1.5,9.5C1.5,5.36,4.86,2,9,2S16.5,5.36,16.5,9.5z M21.37,7.37L20,8l1.37,0.63L22,10l0.63-1.37L24,8 l-1.37-0.63L22,6L21.37,7.37z M19,6l0.94-2.06L22,3l-2.06-0.94L19,0l-0.94,2.06L16,3l2.06,0.94L19,6z"/></svg>');
-    background-size: 400px;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="%23FFFFFF"><rect fill="none" height="24" width="24" y="0"/><path d="M7,20h4c0,1.1-0.9,2-2,2S7,21.1,7,20z M5,19h8v-2H5V19z M16.5,9.5c0,3.82-2.66,5.86-3.77,6.5H5.27 C4.16,15.36,1.5,13.32,1.5,9.5C1.5,5.36,4.86,2,9,2S16.5,5.36,16.5,9.5z M21.37,7.37L20,8l1.37,0.63L22,10l0.63-1.37L24,8 l-1.37-0.63L22,6L21.37,7.37z M19,6l0.94-2.06L22,3l-2.06-0.94L19,0l-0.94,2.06L16,3l2.06,0.94L19,6z"/></svg>');
+    background-size: 400px;
     background-repeat: no-repeat;
     background-position: 80% 20px;
-    opacity: 0.2;
+    opacity: 0.4;
+    z-index: 1;
   }
 
   .header-section {
@@ -65,6 +67,8 @@
     align-items: center;
     height: 100%;
     text-align: center;
+    position: relative;
+    z-index: 2;
   }
 
   .header-headline {
@@ -73,6 +77,7 @@
       font-weight: bold;
       line-height: 56px;
       margin: 15px 5px;
+      z-index: 3;
     }
 
     h2 {
@@ -86,7 +91,6 @@
   .header-start {
     text-align: center;
     margin: 15px 0 0 0;
-
     .mat-mdc-raised-button {
       font-size: 15px;
     }
